fixing spacing

--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -313,7 +313,7 @@ ol {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 150px;
     }
 
     .download-section {
@@ -322,7 +322,7 @@ ol {
 
     #map {
         height: 400px;
-        margin-top: 250px;
+        margin-top: 150px;
     }
 }
 
